design all most complate

--- a/index.html
+++ b/index.html
@@ -9,35 +9,158 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 
-    <title>Hello, world!</title>
+    <title>Cricket top five 2022</title>
 </head>
 
 <body>
-    <header>
+    <header class="container-fluid">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/bg-img.jpg" class="d-block w-100" alt="...">
+                    <img src="/images/bg.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h1>Cricket top five 2022</h1>
+                        <h1 class="fw-bold heading-text">Cricket top five 2022</h1>
                         <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
                             consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div>
-
-
-        </div>
     </header>
 
+    <main class="container">
+        <div class="row g-2">
+            <div class="col-10">
+                <section class="container-fluid">
+                    <div class="row g-3">
+                        <div class="col-md-4">
+                            <div class=" card">
+                                <img src="/images/Mashrafe-Mortaza.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Mashrafe Mortaza</h5>
+                                    <p class="card-text">Mashrafe Bin Mortaza is a Bangladeshi international cricketer
+                                        and
+                                        politi.....<small class="text-warning">Read More</small></p>
+                                    <a href="#" class="btn btn-primary w-100 py-2 fw-semibold">SELECT</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class=" card">
+                                <img src="/images/Mashrafe-Mortaza.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Mashrafe Mortaza</h5>
+                                    <p class="card-text">Mashrafe Bin Mortaza is a Bangladeshi international cricketer
+                                        and
+                                        politi.....<small class="text-warning">Read More</small></p>
+                                    <a href="#" class="btn btn-primary w-100 py-2 fw-semibold">SELECT</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class=" card">
+                                <img src="/images/Mashrafe-Mortaza.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Mashrafe Mortaza</h5>
+                                    <p class="card-text">Mashrafe Bin Mortaza is a Bangladeshi international cricketer
+                                        and
+                                        politi.....<small class="text-warning">Read More</small></p>
+                                    <a href="#" class="btn btn-primary w-100 py-2 fw-semibold">SELECT</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class=" card">
+                                <img src="/images/Mashrafe-Mortaza.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Mashrafe Mortaza</h5>
+                                    <p class="card-text">Mashrafe Bin Mortaza is a Bangladeshi international cricketer
+                                        and
+                                        politi.....<small class="text-warning">Read More</small></p>
+                                    <a href="#" class="btn btn-primary w-100 py-2 fw-semibold">SELECT</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class=" card">
+                                <img src="/images/Mashrafe-Mortaza.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Mashrafe Mortaza</h5>
+                                    <p class="card-text">Mashrafe Bin Mortaza is a Bangladeshi international cricketer
+                                        and
+                                        politi.....<small class="text-warning">Read More</small></p>
+                                    <a href="#" class="btn btn-primary w-100 py-2 fw-semibold">SELECT</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class=" card">
+                                <img src="/images/Mashrafe-Mortaza.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">Mashrafe Mortaza</h5>
+                                    <p class="card-text">Mashrafe Bin Mortaza is a Bangladeshi international cricketer
+                                        and
+                                        politi.....<small class="text-warning">Read More</small></p>
+                                    <a href="#" class="btn btn-primary w-100 py-2 fw-semibold">SELECT</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
+            </div>
+            <div class="col">
+                <div class="row gy-5">
+                    <div class="col-12">
+                        <div class=" card">
+                            <h4 class="text-center text-warning">Select Five</h4>
+                            <ol>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class=" card">
+                            <h4 class="text-center text-warning">Budget</h4>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text" id="inputGroup-sizing-default">Per Player </span>
+                                <input type="text" class="form-control" aria-label="Sizing example input"
+                                    aria-describedby="inputGroup-sizing-default">
+                            </div>
+                            <a href="#" class="btn btn-primary w-100 py-2 fw-semibold">Calculate</a>
+                            <p class="text-center">Player Expenses <span class="text-warning">$00</span></p>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text" id="inputGroup-sizing-default">Manager</span>
+                                <input type="text" class="form-control" aria-label="Sizing example input"
+                                    aria-describedby="inputGroup-sizing-default">
+                            </div>
+                            <div class="input-group mb-3">
+                                <span class="input-group-text" id="inputGroup-sizing-default">Coach</span>
+                                <input type="text" class="form-control" aria-label="Sizing example input"
+                                    aria-describedby="inputGroup-sizing-default">
+                            </div>
+                            <a href="#" class="btn btn-primary w-100 py-2 fw-semibold">Calculate Total</a>
+                            <p class="text-center">Total <span class="text-warning ">$00</span></p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </main>
+
+
+
+    <script src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <script src="main.js"></script>
 </body>
 
 </html>
